# Shapley-and-Influence-Diffusion

./: README.md  requirements.txt
data/congress/: congress_100degseeds_list.txt  congress_10degseeds_list.txt  congress_10imseeds_list.txt  congress_50degseeds_list.txt  congress_50imseeds_list.txt  congress_5degseeds_list.txt  congress_5imseeds_list.txt  congress_graph_10degseeds.pkl  congress_graph_10randseeds.pkl  congress_graph_20degseeds.pkl  congress_graph_50degseeds.pkl  congress_graph_50randseeds.pkl  congress_graph_5degseeds.pkl  congress_graph_5randseeds.pkl  node_degree_ranking.csv  node_degree_ranking.txt
data/twitter/: twitter_1000degseeds_list.txt  twitter_100degseeds_list.txt  twitter_10degseeds_list.txt
experiments/: driver_rust.py  exp_casestudy_congress.py  exp_twitter.py
results/congress_parallel/raw_logs/: congress_parallel_graph_5seeds_deg_rr_k5_epsilon0.01_ell1_round1.txt
results/congress_parallel/shapley_values/: congress_parallel_graph_5seeds_deg_rr_k5_epsilon0.01_ell1_round1.csv
results/twitter_parallel/raw_logs/: twitter_parallel_graph_1000seeds_deg_dp_single_optimize.txt  twitter_parallel_graph_1000seeds_deg_permute1single_n500_m500_round1.txt  twitter_parallel_graph_1000seeds_deg_permute2_n5000_round1.txt  twitter_parallel_graph_1000seeds_deg_permute2single_n5000_round1.txt  (+16 more)
shapley_rust_pyo3/: Cargo.toml  job.sh
shapley_rust_pyo3/src/: graph_utils.rs  influence_model_utils.rs  lib.rs  permutation2_shapley.rs  permutation_shapley.rs  rr_shapley.rs  single_shapley.rs  single_shapley_optimize.rs
(+20 files in other folders)
