[package]
name = "shapley_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "shapley_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
rand = "0.8.5"
rayon = "1.7"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4"
statrs = "0.16"
itertools = "0.10.5"